--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   "dependencies": {
     "react": "16.13.1",
     "react-native": "0.63.3",
+    "react-native-gesture-handler": "^1.8.0",
+    "react-native-material-dropdown-v2": "^0.11.1",
+    "react-native-paper": "^4.3.0",
+    "react-native-reanimated": "^1.13.1",
+    "react-native-tab-view": "^2.15.2",
     "react-native-vector-icons": "^7.1.0"
   },
   "devDependencies": {
